// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packAnimal center option can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 40.02287021154946%;
        height: 40.02287021154946%;
        z-index: 0;
        transform: translateX(-0.07142857142857212%) translateY(-0.07142857142857212%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.0028587764436825,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.0028587764436825,
      \\"e\\":-0.014293882218410658,
      \\"f\\":-0.014293882218410658
    }",
    "points": Array [
      Object {
        "x": -0.014293882218410658,
        "y": -0.014293882218410658,
      },
      Object {
        "x": 24.999999999999993,
        "y": -0.014293882218410658,
      },
      Object {
        "x": 12.492853058890793,
        "y": 24.999999999999993,
      },
    ],
    "rotate": -0,
    "scale": 5.0028587764436825,
    "svgTransform": "matrix(5.0028587764436825,0,0,5.0028587764436825,-0.014293882218410658,-0.014293882218410658)",
    "translateX": -0.014293882218410658,
    "translateY": -0.014293882218410658,
    "zIndex": -0,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.587764436821043%;
        height: 28.587764436821043%;
        z-index: 48;
        transform: translateX(112.39999999999992%) translateY(112.39999999999992%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.573470554602631,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.573470554602631,
      \\"e\\":16.066323613493417,
      \\"f\\":16.066323613493417
    }",
    "points": Array [
      Object {
        "x": 16.066323613493417,
        "y": 16.066323613493417,
      },
      Object {
        "x": 33.93367638650656,
        "y": 16.066323613493417,
      },
      Object {
        "x": 33.93367638650656,
        "y": 33.93367638650656,
      },
      Object {
        "x": 16.066323613493417,
        "y": 33.93367638650656,
      },
    ],
    "rotate": -0,
    "scale": 3.573470554602631,
    "svgTransform": "matrix(3.573470554602631,0,0,3.573470554602631,16.066323613493417,16.066323613493417)",
    "translateX": 16.066323613493417,
    "translateY": 16.066323613493417,
    "zIndex": 48,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 40.02287021154946%;
        height: 40.02287021154946%;
        z-index: 75;
        transform: translateX(124.92857142857142%) translateY(124.92857142857142%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.0028587764436825,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.0028587764436825,
      \\"e\\":25,
      \\"f\\":25
    }",
    "points": Array [
      Object {
        "x": 25,
        "y": 25,
      },
      Object {
        "x": 50.01429388221841,
        "y": 25,
      },
      Object {
        "x": 37.50714694110921,
        "y": 50.01429388221841,
      },
    ],
    "rotate": -0,
    "scale": 5.0028587764436825,
    "svgTransform": "matrix(5.0028587764436825,0,0,5.0028587764436825,25,25)",
    "translateX": 25,
    "translateY": 25,
    "zIndex": 75,
  },
]
`;

exports[`packAnimal it works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.028587764436814%;
        height: 50.028587764436814%;
        z-index: 0;
        transform: translateX(-0.0571428571428435%) translateY(-0.0571428571428435%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.0028587764436825,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.0028587764436825,
      \\"e\\":-0.014293882218407106,
      \\"f\\":-0.014293882218407106
    }",
    "points": Array [
      Object {
        "x": -0.014293882218407104,
        "y": -0.014293882218407104,
      },
      Object {
        "x": 25.000000000000014,
        "y": -0.014293882218407104,
      },
      Object {
        "x": 12.492853058890798,
        "y": 25.000000000000014,
      },
    ],
    "rotate": -0,
    "scale": 5.0028587764436825,
    "svgTransform": "matrix(5.0028587764436825,0,0,5.0028587764436825,-0.014293882218407106,-0.014293882218407106)",
    "translateX": -0.014293882218407106,
    "translateY": -0.014293882218407106,
    "zIndex": -0,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.734705546026305%;
        height: 35.734705546026305%;
        z-index: 48;
        transform: translateX(89.91999999999992%) translateY(89.91999999999992%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.573470554602631,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.573470554602631,
      \\"e\\":16.066323613493413,
      \\"f\\":16.066323613493413
    }",
    "points": Array [
      Object {
        "x": 16.066323613493413,
        "y": 16.066323613493413,
      },
      Object {
        "x": 33.933676386506576,
        "y": 16.066323613493413,
      },
      Object {
        "x": 33.933676386506576,
        "y": 33.933676386506576,
      },
      Object {
        "x": 16.066323613493413,
        "y": 33.933676386506576,
      },
    ],
    "rotate": -0,
    "scale": 3.573470554602631,
    "svgTransform": "matrix(3.573470554602631,0,0,3.573470554602631,16.066323613493413,16.066323613493413)",
    "translateX": 16.066323613493413,
    "translateY": 16.066323613493413,
    "zIndex": 48,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 40.02287021154946%;
        height: 40.02287021154946%;
        z-index: 75;
        transform: translateX(124.92857142857142%) translateY(124.92857142857142%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.0028587764436825,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.0028587764436825,
      \\"e\\":24.999999999999996,
      \\"f\\":24.999999999999996
    }",
    "points": Array [
      Object {
        "x": 25,
        "y": 25,
      },
      Object {
        "x": 50.014293882218404,
        "y": 25,
      },
      Object {
        "x": 37.507146941109205,
        "y": 50.014293882218404,
      },
    ],
    "rotate": -0,
    "scale": 5.0028587764436825,
    "svgTransform": "matrix(5.0028587764436825,0,0,5.0028587764436825,24.999999999999996,24.999999999999996)",
    "translateX": 24.999999999999996,
    "translateY": 24.999999999999996,
    "zIndex": 75,
  },
]
`;

exports[`packAnimal it works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 100%;
        height: 100%;
        z-index: 0;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":10,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":10,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 50,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 10,
    "svgTransform": "matrix(10,0,0,10,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 0,
  },
]
`;

exports[`packAnimal it works 3`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 22.875816993464053%;
        height: 22.875816993464053%;
        z-index: 14;
        transform: translateX(124.8214285714286%) translateY(-0.178571428571525%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8594771241830066,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8594771241830066,
      \\"e\\":14.27696078431373,
      \\"f\\":-0.02042483660131822
    }",
    "points": Array [
      Object {
        "x": 14.276960784313728,
        "y": -0.02042483660131687,
      },
      Object {
        "x": 28.574346405228752,
        "y": -0.02042483660131687,
      },
      Object {
        "x": 21.425653594771237,
        "y": 14.27696078431371,
      },
    ],
    "rotate": -0,
    "scale": 2.8594771241830066,
    "svgTransform": "matrix(2.8594771241830066,0,0,2.8594771241830066,14.27696078431373,-0.02042483660131822)",
    "translateX": 14.27696078431373,
    "translateY": -0.02042483660131822,
    "zIndex": 14,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 20.424836601307188%;
        height: 16.33986928104575%;
        z-index: 42;
        transform: translateX(229.8000000000001%) translateY(112.24999999999996%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.042483660130719,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.042483660130719,
      \\"e\\":23.46813725490197,
      \\"f\\":9.170751633986924
    }",
    "points": Array [
      Object {
        "x": 23.468137254901965,
        "y": 9.170751633986933,
      },
      Object {
        "x": 33.680555555555564,
        "y": 9.170751633986933,
      },
      Object {
        "x": 33.680555555555564,
        "y": 19.383169934640527,
      },
      Object {
        "x": 23.468137254901965,
        "y": 19.383169934640527,
      },
    ],
    "rotate": -0,
    "scale": 2.042483660130719,
    "svgTransform": "matrix(2.042483660130719,0,0,2.042483660130719,23.46813725490197,9.170751633986924)",
    "translateX": 23.46813725490197,
    "translateY": 9.170751633986924,
    "zIndex": 42,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 22.875816993464053%;
        height: 22.875816993464053%;
        z-index: 43;
        transform: translateX(124.8214285714286%) translateY(124.82142857142836%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8594771241830066,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8594771241830066,
      \\"e\\":14.27696078431373,
      \\"f\\":14.276960784313701
    }",
    "points": Array [
      Object {
        "x": 14.276960784313728,
        "y": 14.2769607843137,
      },
      Object {
        "x": 28.574346405228752,
        "y": 14.2769607843137,
      },
      Object {
        "x": 21.425653594771237,
        "y": 28.574346405228724,
      },
    ],
    "rotate": -0,
    "scale": 2.8594771241830066,
    "svgTransform": "matrix(2.8594771241830066,0,0,2.8594771241830066,14.27696078431373,14.276960784313701)",
    "translateX": 14.27696078431373,
    "translateY": 14.276960784313701,
    "zIndex": 43,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 22.875816993464053%;
        height: 22.875816993464053%;
        z-index: 64;
        transform: translateX(187.32142857142867%) translateY(187.3214285714285%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8594771241830066,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8594771241830066,
      \\"e\\":21.425653594771255,
      \\"f\\":21.425653594771234
    }",
    "points": Array [
      Object {
        "x": 21.425653594771255,
        "y": 21.42565359477124,
      },
      Object {
        "x": 35.72303921568628,
        "y": 21.42565359477124,
      },
      Object {
        "x": 28.574346405228766,
        "y": 35.72303921568624,
      },
    ],
    "rotate": -0,
    "scale": 2.8594771241830066,
    "svgTransform": "matrix(2.8594771241830066,0,0,2.8594771241830066,21.425653594771255,21.425653594771234)",
    "translateX": 21.425653594771255,
    "translateY": 21.425653594771234,
    "zIndex": 64,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 16.33986928104575%;
        height: 20.424836601307188%;
        z-index: 78;
        transform: translateX(199.75000000000009%) translateY(299.7999999999999%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.042483660130719,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.042483660130719,
      \\"e\\":16.31944444444445,
      \\"f\\":30.616830065359466
    }",
    "points": Array [
      Object {
        "x": 16.319444444444457,
        "y": 30.616830065359466,
      },
      Object {
        "x": 26.531862745098046,
        "y": 30.616830065359466,
      },
      Object {
        "x": 26.531862745098046,
        "y": 40.82924836601307,
      },
      Object {
        "x": 16.319444444444457,
        "y": 40.82924836601307,
      },
    ],
    "rotate": -0,
    "scale": 2.042483660130719,
    "svgTransform": "matrix(2.042483660130719,0,0,2.042483660130719,16.31944444444445,30.616830065359466)",
    "translateX": 16.31944444444445,
    "translateY": 30.616830065359466,
    "zIndex": 78,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 22.875816993464053%;
        height: 28.59477124183007%;
        z-index: 93;
        transform: translateX(187.32142857142867%) translateY(249.85714285714292%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8594771241830066,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8594771241830066,
      \\"e\\":21.425653594771255,
      \\"f\\":35.723039215686285
    }",
    "points": Array [
      Object {
        "x": 21.425653594771255,
        "y": 35.72303921568628,
      },
      Object {
        "x": 35.72303921568628,
        "y": 35.72303921568628,
      },
      Object {
        "x": 28.574346405228766,
        "y": 50.02042483660132,
      },
    ],
    "rotate": -0,
    "scale": 2.8594771241830066,
    "svgTransform": "matrix(2.8594771241830066,0,0,2.8594771241830066,21.425653594771255,35.723039215686285)",
    "translateX": 21.425653594771255,
    "translateY": 35.723039215686285,
    "zIndex": 93,
  },
]
`;

exports[`packAnimal jitter option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 6.966266390962521%;
        height: 5.573013112770016%;
        z-index: 117;
        transform: translateX(889.2512644877897%) translateY(1548.8565200497906%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.696626639096252,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.696626639096252,
      \\"e\\":30.97380598461106,
      \\"f\\":43.15898848018409
    }",
    "points": Array [
      Object {
        "x": 30.97380598461106,
        "y": 43.15898848018409,
      },
      Object {
        "x": 34.45693918009232,
        "y": 43.15898848018409,
      },
      Object {
        "x": 32.71537258235169,
        "y": 46.64212167566535,
      },
    ],
    "rotate": -0,
    "scale": 0.696626639096252,
    "svgTransform": "matrix(0.696626639096252,0,0,0.696626639096252,30.97380598461106,43.15898848018409)",
    "translateX": 30.97380598461106,
    "translateY": 43.15898848018409,
    "zIndex": 117,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 3.7911447010046007%;
        height: 3.7911447010046007%;
        z-index: 52;
        transform: translateX(-2.0736544047142305%) translateY(1367.5052297395932%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.37911447010046007,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.37911447010046007,
      \\"e\\":-0.03930761954073603,
      \\"f\\":25.92205102661669
    }",
    "points": Array [
      Object {
        "x": -0.039307619540740066,
        "y": 25.92205102661669,
      },
      Object {
        "x": 1.856264730961563,
        "y": 25.92205102661669,
      },
      Object {
        "x": 1.856264730961563,
        "y": 27.81762337711899,
      },
      Object {
        "x": -0.039307619540740066,
        "y": 27.81762337711899,
      },
    ],
    "rotate": -0,
    "scale": 0.37911447010046007,
    "svgTransform": "matrix(0.37911447010046007,0,0,0.37911447010046007,-0.03930761954073603,25.92205102661669)",
    "translateX": -0.03930761954073603,
    "translateY": 25.92205102661669,
    "zIndex": 52,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 7.353692528708134%;
        height: 7.353692528708134%;
        z-index: 53;
        transform: translateX(1260.930102100188%) translateY(91.32495848108417%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.7353692528708133,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.7353692528708133,
      \\"e\\":46.36246135518668,
      \\"f\\":3.3578783243346457
    }",
    "points": Array [
      Object {
        "x": 46.36246135518668,
        "y": 3.3578783243346444,
      },
      Object {
        "x": 50.03930761954075,
        "y": 3.3578783243346444,
      },
      Object {
        "x": 48.200884487363716,
        "y": 7.034724588688711,
      },
    ],
    "rotate": -0,
    "scale": 0.7353692528708133,
    "svgTransform": "matrix(0.7353692528708133,0,0,0.7353692528708133,46.36246135518668,3.3578783243346457)",
    "translateX": 46.36246135518668,
    "translateY": 3.3578783243346457,
    "zIndex": 53,
  },
]
`;

exports[`packAnimal jitter option works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 49.10213243546576%;
        height: 49.10213243546576%;
        z-index: 0;
        transform: translateX(0.9188605727983289%) translateY(-1.3868477607677607%) rotate(10.595998521894193deg)
      ",
    "matrix": "{
      \\"a\\":4.826485238548134,
      \\"b\\":0.9029032834014713,
      \\"c\\":-0.9029032834014713,
      \\"d\\":4.826485238548134,
      \\"e\\":0.22559006767635736,
      \\"f\\":-0.3404859120852386
    }",
    "points": Array [
      Object {
        "x": 0.2255900676763574,
        "y": -0.3404859120852372,
      },
      Object {
        "x": 24.35801626041703,
        "y": 4.174030504922119,
      },
      Object {
        "x": 7.777286747039333,
        "y": 26.04919848915911,
      },
    ],
    "rotate": 10.595998521894193,
    "scale": 4.910213243546576,
    "svgTransform": "matrix(4.826485238548134,0.9029032834014713,-0.9029032834014713,4.826485238548134,0.22559006767635736,-0.3404859120852386)",
    "translateX": 0.22559006767635736,
    "translateY": -0.3404859120852386,
    "zIndex": -0,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.07295173961841%;
        height: 35.07295173961841%;
        z-index: 52;
        transform: translateX(66.56154774953569%) translateY(114.66096778966208%) rotate(-15.740715190768213deg)
      ",
    "matrix": "{
      \\"a\\":3.3757688372424277,
      \\"b\\":-0.9514747473259239,
      \\"c\\":0.9514747473259239,
      \\"d\\":3.3757688372424277,
      \\"e\\":11.672549759668858,
      \\"f\\":20.107492948523795
    }",
    "points": Array [
      Object {
        "x": 11.672549759668856,
        "y": 20.107492948523788,
      },
      Object {
        "x": 28.55139394588101,
        "y": 15.350119211894173,
      },
      Object {
        "x": 33.308767682510634,
        "y": 32.22896339810632,
      },
      Object {
        "x": 16.42992349629848,
        "y": 36.98633713473595,
      },
    ],
    "rotate": -15.740715190768213,
    "scale": 3.507295173961841,
    "svgTransform": "matrix(3.3757688372424277,-0.9514747473259239,0.9514747473259239,3.3757688372424277,11.672549759668858,20.107492948523795)",
    "translateX": 11.672549759668858,
    "translateY": 20.107492948523795,
    "zIndex": 52,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 39.281705948372625%;
        height: 39.281705948372625%;
        z-index: 73;
        transform: translateX(133.72038245989413%) translateY(118.6003056433115%) rotate(16.74037452787161deg)
      ",
    "matrix": "{
      \\"a\\":4.702117243371246,
      \\"b\\":1.4143152147562434,
      \\"c\\":-1.4143152147562434,
      \\"d\\":4.702117243371246,
      \\"e\\":26.263823715467428,
      \\"f\\":23.294111658338405
    }",
    "points": Array [
      Object {
        "x": 26.263823715467424,
        "y": 23.294111658338412,
      },
      Object {
        "x": 49.774409932323636,
        "y": 30.36568773211963,
      },
      Object {
        "x": 30.94754075011432,
        "y": 50.34048591208523,
      },
    ],
    "rotate": 16.74037452787161,
    "scale": 4.910213243546578,
    "svgTransform": "matrix(4.702117243371246,1.4143152147562434,-1.4143152147562434,4.702117243371246,26.263823715467428,23.294111658338405)",
    "translateX": 26.263823715467428,
    "translateY": 23.294111658338405,
    "zIndex": 73,
  },
]
`;

exports[`packAnimal margin option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 48.95104895104896%;
        height: 48.95104895104896%;
        z-index: -1;
        transform: translateX(-2.023809523809534%) translateY(-2.023809523809534%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.895104895104896,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.895104895104896,
      \\"e\\":-0.49533799533799794,
      \\"f\\":-0.49533799533799794
    }",
    "points": Array [
      Object {
        "x": -0.49533799533799794,
        "y": -0.49533799533799794,
      },
      Object {
        "x": 23.980186480186486,
        "y": -0.49533799533799794,
      },
      Object {
        "x": 11.742424242424244,
        "y": 23.980186480186486,
      },
    ],
    "rotate": -0,
    "scale": 4.895104895104896,
    "svgTransform": "matrix(4.895104895104896,0,0,4.895104895104896,-0.49533799533799794,-0.49533799533799794)",
    "translateX": -0.49533799533799794,
    "translateY": -0.49533799533799794,
    "zIndex": -1,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.670033670033675%;
        height: 33.670033670033675%;
        z-index: 50;
        transform: translateX(98.49999999999991%) translateY(98.49999999999991%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.367003367003367,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.367003367003367,
      \\"e\\":16.58249158249157,
      \\"f\\":16.58249158249157
    }",
    "points": Array [
      Object {
        "x": 16.58249158249157,
        "y": 16.58249158249157,
      },
      Object {
        "x": 33.41750841750842,
        "y": 16.58249158249157,
      },
      Object {
        "x": 33.41750841750842,
        "y": 33.41750841750842,
      },
      Object {
        "x": 16.58249158249157,
        "y": 33.41750841750842,
      },
    ],
    "rotate": -0,
    "scale": 3.367003367003367,
    "svgTransform": "matrix(3.367003367003367,0,0,3.367003367003367,16.58249158249157,16.58249158249157)",
    "translateX": 16.58249158249157,
    "translateY": 16.58249158249157,
    "zIndex": 50,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 48.95104895104896%;
        height: 48.95104895104896%;
        z-index: 78;
        transform: translateX(106.30952380952378%) translateY(106.30952380952378%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.895104895104896,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.895104895104896,
      \\"e\\":26.019813519813518,
      \\"f\\":26.019813519813518
    }",
    "points": Array [
      Object {
        "x": 26.01981351981352,
        "y": 26.01981351981352,
      },
      Object {
        "x": 50.495337995338005,
        "y": 26.01981351981352,
      },
      Object {
        "x": 38.257575757575765,
        "y": 50.495337995338005,
      },
    ],
    "rotate": -0,
    "scale": 4.895104895104896,
    "svgTransform": "matrix(4.895104895104896,0,0,4.895104895104896,26.019813519813518,26.019813519813518)",
    "translateX": 26.019813519813518,
    "translateY": 26.019813519813518,
    "zIndex": 78,
  },
]
`;

exports[`packAnimal maximizing can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 9.333333333333334%;
        height: 9.333333333333334%;
        z-index: 66;
        transform: translateX(473.21428571428567%) translateY(473.21428571428567%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":22.083333333333332,
      \\"f\\":22.083333333333332
    }",
    "points": Array [
      Object {
        "x": 22.083333333333332,
        "y": 22.083333333333332,
      },
      Object {
        "x": 27.916666666666664,
        "y": 22.083333333333332,
      },
      Object {
        "x": 25,
        "y": 27.916666666666664,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,22.083333333333332,22.083333333333332)",
    "translateX": 22.083333333333332,
    "translateY": 22.083333333333332,
    "zIndex": 66,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 8.333333333333334%;
        height: 8.333333333333334%;
        z-index: 78;
        transform: translateX(619.9999999999999%) translateY(619.9999999999999%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.8333333333333334,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.8333333333333334,
      \\"e\\":25.833333333333332,
      \\"f\\":25.833333333333332
    }",
    "points": Array [
      Object {
        "x": 25.833333333333332,
        "y": 25.833333333333332,
      },
      Object {
        "x": 30,
        "y": 25.833333333333332,
      },
      Object {
        "x": 30,
        "y": 30,
      },
      Object {
        "x": 25.833333333333332,
        "y": 30,
      },
    ],
    "rotate": -0,
    "scale": 0.8333333333333334,
    "svgTransform": "matrix(0.8333333333333334,0,0,0.8333333333333334,25.833333333333332,25.833333333333332)",
    "translateX": 25.833333333333332,
    "translateY": 25.833333333333332,
    "zIndex": 78,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666668%;
        height: 11.666666666666668%;
        z-index: 84;
        transform: translateX(478.57142857142844%) translateY(478.57142857142844%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":27.916666666666664,
      \\"f\\":27.916666666666664
    }",
    "points": Array [
      Object {
        "x": 27.916666666666664,
        "y": 27.916666666666664,
      },
      Object {
        "x": 33.75,
        "y": 27.916666666666664,
      },
      Object {
        "x": 30.833333333333332,
        "y": 33.75,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,27.916666666666664,27.916666666666664)",
    "translateX": 27.916666666666664,
    "translateY": 27.916666666666664,
    "zIndex": 84,
  },
]
`;

exports[`packAnimal postPackPolygonScale option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.727272727272734%;
        height: 47.727272727272734%;
        z-index: -1;
        transform: translateX(-0.7936507936507863%) translateY(-0.7936507936507863%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.772727272727273,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.772727272727273,
      \\"e\\":-0.18939393939393767,
      \\"f\\":-0.18939393939393767
    }",
    "points": Array [
      Object {
        "x": -0.18939393939393767,
        "y": -0.18939393939393767,
      },
      Object {
        "x": 23.67424242424243,
        "y": -0.18939393939393767,
      },
      Object {
        "x": 11.742424242424246,
        "y": 23.67424242424243,
      },
    ],
    "rotate": -0,
    "scale": 4.772727272727273,
    "svgTransform": "matrix(4.772727272727273,0,0,4.772727272727273,-0.18939393939393767,-0.18939393939393767)",
    "translateX": -0.18939393939393767,
    "translateY": -0.18939393939393767,
    "zIndex": -1,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 34.09090909090909%;
        height: 34.09090909090909%;
        z-index: 49;
        transform: translateX(96.66666666666657%) translateY(96.66666666666657%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.4090909090909096,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.4090909090909096,
      \\"e\\":16.477272727272712,
      \\"f\\":16.477272727272712
    }",
    "points": Array [
      Object {
        "x": 16.477272727272712,
        "y": 16.477272727272712,
      },
      Object {
        "x": 33.52272727272727,
        "y": 16.477272727272712,
      },
      Object {
        "x": 33.52272727272727,
        "y": 33.52272727272727,
      },
      Object {
        "x": 16.477272727272712,
        "y": 33.52272727272727,
      },
    ],
    "rotate": -0,
    "scale": 3.4090909090909096,
    "svgTransform": "matrix(3.4090909090909096,0,0,3.4090909090909096,16.477272727272712,16.477272727272712)",
    "translateX": 16.477272727272712,
    "translateY": 16.477272727272712,
    "zIndex": 49,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 38.18181818181819%;
        height: 38.18181818181819%;
        z-index: 79;
        transform: translateX(137.89682539682536%) translateY(137.89682539682536%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.772727272727273,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.772727272727273,
      \\"e\\":26.32575757575757,
      \\"f\\":26.32575757575757
    }",
    "points": Array [
      Object {
        "x": 26.325757575757574,
        "y": 26.325757575757574,
      },
      Object {
        "x": 50.18939393939394,
        "y": 26.325757575757574,
      },
      Object {
        "x": 38.25757575757575,
        "y": 50.18939393939394,
      },
    ],
    "rotate": -0,
    "scale": 4.772727272727273,
    "svgTransform": "matrix(4.772727272727273,0,0,4.772727272727273,26.32575757575757,26.32575757575757)",
    "translateX": 26.32575757575757,
    "translateY": 26.32575757575757,
    "zIndex": 79,
  },
]
`;

exports[`packAnimal rotation can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.028587764436814%;
        height: 50.028587764436814%;
        z-index: 0;
        transform: translateX(-0.0571428571428435%) translateY(-0.0571428571428435%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.0028587764436825,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.0028587764436825,
      \\"e\\":-0.014293882218407106,
      \\"f\\":-0.014293882218407106
    }",
    "points": Array [
      Object {
        "x": -0.014293882218407104,
        "y": -0.014293882218407104,
      },
      Object {
        "x": 25.000000000000014,
        "y": -0.014293882218407104,
      },
      Object {
        "x": 12.492853058890798,
        "y": 25.000000000000014,
      },
    ],
    "rotate": -0,
    "scale": 5.0028587764436825,
    "svgTransform": "matrix(5.0028587764436825,0,0,5.0028587764436825,-0.014293882218407106,-0.014293882218407106)",
    "translateX": -0.014293882218407106,
    "translateY": -0.014293882218407106,
    "zIndex": -0,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.734705546026305%;
        height: 35.734705546026305%;
        z-index: 48;
        transform: translateX(89.91999999999992%) translateY(89.91999999999992%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.573470554602631,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.573470554602631,
      \\"e\\":16.066323613493413,
      \\"f\\":16.066323613493413
    }",
    "points": Array [
      Object {
        "x": 16.066323613493413,
        "y": 16.066323613493413,
      },
      Object {
        "x": 33.933676386506576,
        "y": 16.066323613493413,
      },
      Object {
        "x": 33.933676386506576,
        "y": 33.933676386506576,
      },
      Object {
        "x": 16.066323613493413,
        "y": 33.933676386506576,
      },
    ],
    "rotate": -0,
    "scale": 3.573470554602631,
    "svgTransform": "matrix(3.573470554602631,0,0,3.573470554602631,16.066323613493413,16.066323613493413)",
    "translateX": 16.066323613493413,
    "translateY": 16.066323613493413,
    "zIndex": 48,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 40.02287021154946%;
        height: 40.02287021154946%;
        z-index: 75;
        transform: translateX(124.92857142857142%) translateY(124.92857142857142%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5.0028587764436825,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5.0028587764436825,
      \\"e\\":24.999999999999996,
      \\"f\\":24.999999999999996
    }",
    "points": Array [
      Object {
        "x": 25,
        "y": 25,
      },
      Object {
        "x": 50.014293882218404,
        "y": 25,
      },
      Object {
        "x": 37.507146941109205,
        "y": 50.014293882218404,
      },
    ],
    "rotate": -0,
    "scale": 5.0028587764436825,
    "svgTransform": "matrix(5.0028587764436825,0,0,5.0028587764436825,24.999999999999996,24.999999999999996)",
    "translateX": 24.999999999999996,
    "translateY": 24.999999999999996,
    "zIndex": 75,
  },
]
`;
